Avoid line breaks in song titles in Song Lyrics layout

--- a/layouts/songsheet.css
+++ b/layouts/songsheet.css
@@ -33,6 +33,7 @@ h2 {
 }
 
 h3 {
+    page-break-inside: avoid;
     margin-top: 2rem;
     font-size: 1.3rem;
 }
